写了点关于Lua实现面向对象特性的内容

--- a/documents/diary/2024.md
+++ b/documents/diary/2024.md
@@ -1,3 +1,4 @@
 - 2014.10.12 -- 今天搭建了我的 github page 网站，正式开始执行自己的学习计划。希望从今天开始，每一天的我都会变得更强！
 - 2014.10.13 -- 今天把B站的 Lua 教程进阶部分看完了，感觉有点囫囵吞枣。尤其是元表和面向对象的部分，确实不太好理解。光看还是不行，最好还是自己动手写一下。明天要把这部分内容总结一下记下来。
-- 2014.10.15 -- 胀气好难受 QAQ
+- 2014.10.14 -- 胀气好难受 QAQ
+- 2014.10.15 -- 昨天身体实在是不舒服，学习进度拖延了。今天重新看了一遍面向对象内容，感觉视频里讲的不是非常清晰，于是去找了点其他资料，继续努力理解中...
