--- a/documents/diary/2024.md
+++ b/documents/diary/2024.md
@@ -2,3 +2,4 @@
 - 2014.10.13 -- 今天把B站的 Lua 教程进阶部分看完了，感觉有点囫囵吞枣。尤其是元表和面向对象的部分，确实不太好理解。光看还是不行，最好还是自己动手写一下。明天要把这部分内容总结一下记下来。
 - 2014.10.14 -- 胀气好难受 QAQ
 - 2014.10.15 -- 昨天身体实在是不舒服，学习进度拖延了。今天重新看了一遍面向对象内容，感觉视频里讲的不是非常清晰，于是去找了点其他资料，继续努力理解中...
+- 2014.10.22 -- 昨天参加了一个面试，程序题没写出来。面试手撕代码确实跟在LeetCode上刷题不太一样，方法调用的接口都需要自己来写。因为不熟悉数据结构的定义方法，所以一开始就有点走歪路。再加上，其实我本来的思路是正确的，但是最近刷题都在看链表相关的内容，所以思路就走偏了。归根结底还是自己写算法题不熟练的问题。往后每次练习算法题的时候都要自己手写一下参数列表以及调用实现吧，不然后续遇到这种情况还是会出问题。加油！
